# modules-toy-project

./: .gitignore  CMakeLists.txt  README.md
app/: CMakeLists.txt  main.cpp
images/: README.md
include/: config.hpp  demo.hpp  non_template.hpp  non_template_lib.hpp  system_headers.hpp  template.hpp  template_lib.hpp
lib/: CMakeLists.txt  lib.cpp
modules/: CMakeLists.txt  demo.ixx  lib.ixx  non_template.ixx  template.ixx
scripts/: convert_header_to_module.py  convert_source_to_module.py  generate_primary_module.py
